--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
             <version>5.1.2</version>
-            <scope>test</scope>
+            <scope>compile </scope>
         </dependency>
     </dependencies>
 </project>
